deploy: cfaf04b5036071bd125cd6924b140e80a75a59bd

--- a/fr/index.html
+++ b/fr/index.html
@@ -57,29 +57,39 @@ Oct 2017</div><div class=card-text>Certifie les compétences techniques et l&rsq
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://programmez.com/magazine/article/la-securite-des-la-conception-secure-design target=_blank rel=noopener><i class="fas fa-book mr-1"></i>PDF</a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://github.com/davidaparicio/namecheck target=_blank rel=noopener><i class="fas fa-file mr-1"></i>Code</a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://twitter.com/francoistonic/status/1568152549043093506 target=_blank rel=noopener><i class="fab fa-twitter mr-1"></i>Twitter</a></div></div></div></div></div></section><section id=publications class="home-section wg-pages"><div class=home-section-bg></div><div class=container><div class=row><div class="section-heading col-12 col-lg-4 mb-3 mb-lg-0 d-flex flex-column align-items-center align-items-lg-start"><h1 class=mb-0>Publications</h1></div><div class="col-12 col-lg-8"><div class="alert alert-note"><div>Découvrez rapidement du contenu pertinent en <a href=./publication/>filtrant les publications</a>.</div></div><div class=pub-list-item style=margin-bottom:1rem><i class="far fa-file-alt pub-icon" aria-hidden=true></i>
+<span class="article-metadata li-cite-author"><span>David Aparicio</span><i class="author-notes fas fa-info-circle" data-toggle=tooltip title="Omar Hasan, Lionel Brunie"></i></span>
+(2017).
+<a href=/fr/publication/smpc/>Calculs distribués, efficaces, sécurisés et vérifiables pour les systèmes collaboratifs décentralisés</a>.
+Dans <em>LIRIS</em>.<p><a class="btn btn-outline-primary btn-page-header btn-sm" href=/papers/2016_draft_proposal_paper_fr.pdf target=_blank rel=noopener>PDF</a>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/fr/publication/smpc/cite.bib>Citation</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=/fr/project/voivi/>Projet</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=/papers/2015_14th_MDPS.pdf target=_blank rel=noopener>Slides</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://github.com/davidaparicio/voivi_cloud target=_blank rel=noopener><i class="fab fa-github mr-1"></i>Code (multicloud)</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://github.com/davidaparicio/voivi_standalone target=_blank rel=noopener><i class="fab fa-github mr-1"></i>Code (monolithe)</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://liris.cnrs.fr/these/these-david-aparicio target=_blank rel=noopener><i class="fas fa-address-book mr-1"></i>Profil</a></p></div><div class=pub-list-item style=margin-bottom:1rem><i class="far fa-file-alt pub-icon" aria-hidden=true></i>
 <span class="article-metadata li-cite-author"><span>David Aparicio</span>, <span>Luiz E. Buzato</span></span>
 (2014).
 <a href=/fr/publication/transactional_memories/>Étude des facteurs externes aux mémoires transactionnelles logicielles qui influent sur leur rapidité d'exécution</a>.
-Dans <em>PiBic</em>.<p><a class="btn btn-outline-primary btn-page-header btn-sm" href=/fr/publication/transactional_memories/transactional_memories.pdf target=_blank rel=noopener>PDF</a>
+Dans <em>PiBic</em>.<p><a class="btn btn-outline-primary btn-page-header btn-sm" href=/papers/2014_transactional_memories.pdf target=_blank rel=noopener>PDF</a>
 <a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/fr/publication/transactional_memories/cite.bib>Citation</a></p></div></div></div></div></section><section id=tags class="home-section wg-tag-cloud"><div class=home-section-bg></div><div class=container><div class=row><div class="section-heading col-12 col-lg-4 mb-3 mb-lg-0 d-flex flex-column align-items-center align-items-lg-start"><h1 class=mb-0>Sujets populaires</h1></div><div class="col-12 col-lg-8"><div class=tag-cloud><a href=/fr/tag/bbl/ style=font-size:.7rem>BBL</a>
 <a href=/fr/tag/brown-bag-lunch/ style=font-size:.7rem>Brown Bag Lunch</a>
 <a href=/fr/tag/cli/ style=font-size:1.5308965512711108rem>CLI</a>
 <a href=/fr/tag/cloud/ style=font-size:1.761046095340967rem>Cloud</a>
-<a href=/fr/tag/clubhouse/ style=font-size:.7rem>Clubhouse</a>
-<a href=/fr/tag/conference/ style=font-size:.7rem>Conférence</a>
 <a href=/fr/tag/cybersecurite/ style=font-size:1.8563275795941716rem>Cybersécurité</a>
-<a href=/fr/tag/dataops/ style=font-size:.7rem>DataOps</a>
-<a href=/fr/tag/devops/ style=font-size:1.1691034487288892rem>DevOps</a>
+<a href=/fr/tag/devops/ style=font-size:1.2919426466120778rem>DevOps</a>
 <a href=/fr/tag/devoxxfr/ style=font-size:1.1691034487288892rem>DevoxxFR</a>
 <a href=/fr/tag/devsecops/ style=font-size:1.3872241308652824rem>DevSecOps</a>
-<a href=/fr/tag/docker/ style=font-size:.7rem>Docker</a>
-<a href=/fr/tag/entretien/ style=font-size:.7rem>Entretien</a>
+<a href=/fr/tag/docker/ style=font-size:.9959713233060388rem>Docker</a>
+<a href=/fr/tag/kubernetes/ style=font-size:.9959713233060388rem>Kubernetes</a>
 <a href=/fr/tag/meetup/ style=font-size:1.1691034487288892rem>Meetup</a>
+<a href=/fr/tag/multi-cloud/ style=font-size:.9959713233060388rem>Multi-cloud</a>
 <a href=/fr/tag/quickie/ style=font-size:1.6831954541713214rem>Quickie</a>
 <a href=/fr/tag/securite/ style=font-size:1.5308965512711108rem>Sécurité</a>
 <a href=/fr/tag/securitybydesign/ style=font-size:.9959713233060388rem>SecurityByDesign</a>
+<a href=/fr/tag/smpc/ style=font-size:.9959713233060388rem>SMPC</a>
 <a href=/fr/tag/sre/ style=font-size:1.9791667774773603rem>SRE</a>
 <a href=/fr/tag/twitch/ style=font-size:1.1691034487288892rem>Twitch</a>
+<a href=/fr/tag/vert.x/ style=font-size:.9959713233060388rem>Vert.X</a>
 <a href=/fr/tag/workshop/ style=font-size:.9959713233060388rem>Workshop</a></div></div></div></div></section><section id=contact class="home-section wg-contact"><div class=home-section-bg></div><div class=container><div class=row><div class="section-heading col-12 col-lg-4 mb-3 mb-lg-0 d-flex flex-column align-items-center align-items-lg-start"><h1 class=mb-0>Contact</h1></div><div class="col-12 col-lg-8"><div class=mb-3><form name=contact method=post netlify netlify-honeypot=_gotcha><div class="form-group form-inline"><label class=sr-only for=inputName>Nom</label>
 <input type=text name=name class="form-control w-100" id=inputName placeholder=Nom required></div><div class="form-group form-inline"><label class=sr-only for=inputEmail>E-mail</label>
 <input type=email name=email class="form-control w-100" id=inputEmail placeholder=E-mail required></div><div class=form-group><label class=sr-only for=inputMessage>Message</label>
