--- a/index.html
+++ b/index.html
@@ -49,29 +49,38 @@ Oct 2017</div><div class=card-text>Certifies technical knowledge, skill, and abi
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://programmez.com/magazine/article/la-securite-des-la-conception-secure-design target=_blank rel=noopener><i class="fas fa-book mr-1"></i>PDF</a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://github.com/davidaparicio/namecheck target=_blank rel=noopener><i class="fas fa-file mr-1"></i>Code</a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://twitter.com/francoistonic/status/1568152549043093506 target=_blank rel=noopener><i class="fab fa-twitter mr-1"></i>Twitter</a></div></div></div></div></div></section><section id=publications class="home-section wg-pages"><div class=home-section-bg></div><div class=container><div class=row><div class="section-heading col-12 col-lg-4 mb-3 mb-lg-0 d-flex flex-column align-items-center align-items-lg-start"><h1 class=mb-0>Recent Publications</h1></div><div class="col-12 col-lg-8"><div class="alert alert-note"><div>Quickly discover relevant content by <a href=./publication/>filtering publications</a>.</div></div><div class=pub-list-item style=margin-bottom:1rem><i class="far fa-file-alt pub-icon" aria-hidden=true></i>
+<span class="article-metadata li-cite-author"><span>David Aparicio</span><i class="author-notes fas fa-info-circle" data-toggle=tooltip title="Omar Hasan, Lionel Brunie"></i></span>
+(2017).
+<a href=/publication/smpc/>Practical and verifiable secure multi-party computation for decentralized collaborative systems</a>.
+In <em>LIRIS</em>.<p><a class="btn btn-outline-primary btn-page-header btn-sm" href=/papers/2016_draft_proposal_paper_en.pdf target=_blank rel=noopener>PDF</a>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/publication/smpc/cite.bib>Cite</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=/project/voivi/>Project</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=/papers/2015_14th_MDPS.pdf target=_blank rel=noopener>Slides</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://github.com/davidaparicio/voivi_cloud target=_blank rel=noopener><i class="fab fa-github mr-1"></i>Code (multicloud)</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://github.com/davidaparicio/voivi_standalone target=_blank rel=noopener><i class="fab fa-github mr-1"></i>Code (monolith)</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://liris.cnrs.fr/en/thesis/thesis-david-aparicio target=_blank rel=noopener><i class="fas fa-address-book mr-1"></i>Profile</a></p></div><div class=pub-list-item style=margin-bottom:1rem><i class="far fa-file-alt pub-icon" aria-hidden=true></i>
 <span class="article-metadata li-cite-author"><span>David Aparicio</span>, <span>Luiz E. Buzato</span></span>
 (2014).
 <a href=/publication/transactional_memories/>A Study of Factors External to Software Transactional Memories that Affect their Speed-up</a>.
-In <em>PiBic</em>.<p><a class="btn btn-outline-primary btn-page-header btn-sm" href=/publication/transactional_memories/transactional_memories.pdf target=_blank rel=noopener>PDF</a>
-<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/publication/transactional_memories/cite.bib>Cite</a></p></div></div></div></div></section><section id=tags class="home-section wg-tag-cloud"><div class=home-section-bg></div><div class=container><div class=row><div class="section-heading col-12 col-lg-4 mb-3 mb-lg-0 d-flex flex-column align-items-center align-items-lg-start"><h1 class=mb-0>Popular Topics</h1></div><div class="col-12 col-lg-8"><div class=tag-cloud><a href=/tag/bbl/ style=font-size:.7rem>BBL</a>
-<a href=/tag/brown-bag-lunch/ style=font-size:.7rem>Brown Bag Lunch</a>
+In <em>PiBic</em>.<p><a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/publication/transactional_memories/cite.bib>Cite</a></p></div></div></div></div></section><section id=tags class="home-section wg-tag-cloud"><div class=home-section-bg></div><div class=container><div class=row><div class="section-heading col-12 col-lg-4 mb-3 mb-lg-0 d-flex flex-column align-items-center align-items-lg-start"><h1 class=mb-0>Popular Topics</h1></div><div class="col-12 col-lg-8"><div class=tag-cloud><a href=/tag/bbl/ style=font-size:.7rem>BBL</a>
 <a href=/tag/cli/ style=font-size:1.465074772034928rem>CLI</a>
 <a href=/tag/cloud/ style=font-size:1.761046095340967rem>Cloud</a>
-<a href=/tag/clubhouse/ style=font-size:.7rem>Clubhouse</a>
-<a href=/tag/conference/ style=font-size:.7rem>Conference</a>
 <a href=/tag/cybersecurity/ style=font-size:1.3872241308652824rem>Cybersecurity</a>
-<a href=/tag/dataops/ style=font-size:.7rem>DataOps</a>
-<a href=/tag/devops/ style=font-size:1.1691034487288892rem>DevOps</a>
+<a href=/tag/devops/ style=font-size:1.2919426466120778rem>DevOps</a>
 <a href=/tag/devoxxfr/ style=font-size:1.1691034487288892rem>DevoxxFR</a>
 <a href=/tag/devsecops/ style=font-size:1.3872241308652824rem>DevSecOps</a>
-<a href=/tag/docker/ style=font-size:.7rem>Docker</a>
+<a href=/tag/docker/ style=font-size:.9959713233060388rem>Docker</a>
+<a href=/tag/kubernetes/ style=font-size:.9959713233060388rem>Kubernetes</a>
 <a href=/tag/meetup/ style=font-size:1.1691034487288892rem>Meetup</a>
+<a href=/tag/multicloud/ style=font-size:.9959713233060388rem>Multicloud</a>
 <a href=/tag/quickie/ style=font-size:1.6831954541713214rem>Quickie</a>
 <a href=/tag/security/ style=font-size:1.8563275795941716rem>Security</a>
 <a href=/tag/securitybydesign/ style=font-size:.9959713233060388rem>SecurityByDesign</a>
+<a href=/tag/smpc/ style=font-size:.9959713233060388rem>SMPC</a>
 <a href=/tag/sre/ style=font-size:1.9791667774773603rem>SRE</a>
 <a href=/tag/tia/ style=font-size:1.1691034487288892rem>TIA</a>
 <a href=/tag/twitch/ style=font-size:1.1691034487288892rem>Twitch</a>
+<a href=/tag/vert.x/ style=font-size:.9959713233060388rem>Vert.X</a>
 <a href=/tag/workshop/ style=font-size:.9959713233060388rem>Workshop</a></div></div></div></div></section><section id=contact class="home-section wg-contact"><div class=home-section-bg></div><div class=container><div class=row><div class="section-heading col-12 col-lg-4 mb-3 mb-lg-0 d-flex flex-column align-items-center align-items-lg-start"><h1 class=mb-0>Contact</h1></div><div class="col-12 col-lg-8"><div class=mb-3><form name=contact method=post netlify netlify-honeypot=_gotcha><div class="form-group form-inline"><label class=sr-only for=inputName>Name</label>
 <input type=text name=name class="form-control w-100" id=inputName placeholder=Name required></div><div class="form-group form-inline"><label class=sr-only for=inputEmail>Email</label>
 <input type=email name=email class="form-control w-100" id=inputEmail placeholder=Email required></div><div class=form-group><label class=sr-only for=inputMessage>Message</label>
