--- a/fr/publication/index.html
+++ b/fr/publication/index.html
@@ -4,7 +4,8 @@
 <a href=# class="dropdown-item js-set-theme-auto"><span>Automatic</span></a></div></li><li class="nav-item dropdown i18n-dropdown"><a href=# class=nav-link data-toggle=dropdown aria-haspopup=true aria-label=Languages><i class="fas fa-globe mr-1" aria-hidden=true></i></a><div class=dropdown-menu><div class="dropdown-item dropdown-item-active"><span>Français</span></div><a class=dropdown-item href=/publication/><span>English</span></a></div></li></ul></div></nav></div><div class=page-body><div class="universal-wrapper pt-3"><h1>Publications</h1></div><div class=universal-wrapper><div class=row><div class=col-lg-12><div class="form-row mb-4"><div class=col-auto><input type=search class=filter-search placeholder=Recherche... autocapitalize=off autocomplete=off autocorrect=off role=textbox spellcheck=false></div><div class=col-auto><select class="pub-filters pubtype-select form-control form-control-sm" data-filter-group=pubtype><option value=*>Type</option><option value=.pubtype-3>
 Preprint</option><option value=.pubtype-6>
 Chapitre de livre</option></select></div><div class=col-auto><select class="pub-filters form-control form-control-sm" data-filter-group=year><option value=*>Date</option><option value=.year-2022>
-2022</option><option value=.year-2014>
+2022</option><option value=.year-2017>
+2017</option><option value=.year-2014>
 2014</option></select></div></div><div id=container-publications><div class="grid-sizer col-lg-12 isotope-item pubtype-6 year-2022"><div class=pub-list-item style=margin-bottom:1rem><i class="far fa-file-alt pub-icon" aria-hidden=true></i>
 <span class="article-metadata li-cite-author"><span>David Aparicio</span></span>
 (2022).
@@ -13,11 +14,21 @@ Dans <em>Programmez! HS8</em>.<p><a href=# class="btn btn-outline-primary btn-pa
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=/fr/project/namecheck/>Projet</a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://programmez.com/magazine/article/la-securite-des-la-conception-secure-design target=_blank rel=noopener><i class="fas fa-book mr-1"></i>PDF</a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://github.com/davidaparicio/namecheck target=_blank rel=noopener><i class="fas fa-file mr-1"></i>Code</a>
-<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://twitter.com/francoistonic/status/1568152549043093506 target=_blank rel=noopener><i class="fab fa-twitter mr-1"></i>Twitter</a></p></div></div><div class="grid-sizer col-lg-12 isotope-item pubtype-3 year-2014"><div class=pub-list-item style=margin-bottom:1rem><i class="far fa-file-alt pub-icon" aria-hidden=true></i>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://twitter.com/francoistonic/status/1568152549043093506 target=_blank rel=noopener><i class="fab fa-twitter mr-1"></i>Twitter</a></p></div></div><div class="grid-sizer col-lg-12 isotope-item pubtype-3 year-2017"><div class=pub-list-item style=margin-bottom:1rem><i class="far fa-file-alt pub-icon" aria-hidden=true></i>
+<span class="article-metadata li-cite-author"><span>David Aparicio</span><i class="author-notes fas fa-info-circle" data-toggle=tooltip title="Omar Hasan, Lionel Brunie"></i></span>
+(2017).
+<a href=/fr/publication/smpc/>Calculs distribués, efficaces, sécurisés et vérifiables pour les systèmes collaboratifs décentralisés</a>.
+Dans <em>LIRIS</em>.<p><a class="btn btn-outline-primary btn-page-header btn-sm" href=/papers/2016_draft_proposal_paper_fr.pdf target=_blank rel=noopener>PDF</a>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/fr/publication/smpc/cite.bib>Citation</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=/fr/project/voivi/>Projet</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=/papers/2015_14th_MDPS.pdf target=_blank rel=noopener>Slides</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://github.com/davidaparicio/voivi_cloud target=_blank rel=noopener><i class="fab fa-github mr-1"></i>Code (multicloud)</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://github.com/davidaparicio/voivi_standalone target=_blank rel=noopener><i class="fab fa-github mr-1"></i>Code (monolithe)</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://liris.cnrs.fr/these/these-david-aparicio target=_blank rel=noopener><i class="fas fa-address-book mr-1"></i>Profil</a></p></div></div><div class="grid-sizer col-lg-12 isotope-item pubtype-3 year-2014"><div class=pub-list-item style=margin-bottom:1rem><i class="far fa-file-alt pub-icon" aria-hidden=true></i>
 <span class="article-metadata li-cite-author"><span>David Aparicio</span>, <span>Luiz E. Buzato</span></span>
 (2014).
 <a href=/fr/publication/transactional_memories/>Étude des facteurs externes aux mémoires transactionnelles logicielles qui influent sur leur rapidité d'exécution</a>.
-Dans <em>PiBic</em>.<p><a class="btn btn-outline-primary btn-page-header btn-sm" href=/fr/publication/transactional_memories/transactional_memories.pdf target=_blank rel=noopener>PDF</a>
+Dans <em>PiBic</em>.<p><a class="btn btn-outline-primary btn-page-header btn-sm" href=/papers/2014_transactional_memories.pdf target=_blank rel=noopener>PDF</a>
 <a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/fr/publication/transactional_memories/cite.bib>Citation</a></p></div></div></div></div></div></div></div><div class=page-footer><div class=container><footer class=site-footer><p class=powered-by>© 2023 David Aparicio</p><p class=powered-by>Publié à la manière <a href=https://gitlab.com/davidaparicio/davidaparicio.gitlab.io target=_blank rel=noopener>GitOps</a> avec <a href=https://gohugo.io/ target=_blank rel=noopener>Hugo</a>+<a href="https://wowchemy.com/?utm_campaign=poweredby" target=_blank rel=noopener>Wowchemy</a></p></footer></div></div><div id=modal class="modal fade" role=dialog><div class=modal-dialog><div class=modal-content><div class=modal-header><h5 class=modal-title>Citation</h5><button type=button class=close data-dismiss=modal aria-label=Close>
 <span aria-hidden=true>&#215;</span></button></div><div class=modal-body><pre><code class="tex hljs"></code></pre></div><div class=modal-footer><a class="btn btn-outline-primary my-1 js-copy-cite" href=# target=_blank><i class="fas fa-copy"></i> Copier</a>
 <a class="btn btn-outline-primary my-1 js-download-cite" href=# target=_blank><i class="fas fa-download"></i> Télécharger</a><div id=modal-error></div></div></div></div></div><script src=/js/vendor-bundle.min.9592335d574f7a97010f99b90ad0f310.js></script>
