deploy: 7f5c18771cf76132a6e2a05ac5ab7e0e07621602

--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@ In <em>LIRIS</em>.<p><a class="btn btn-outline-primary btn-page-header btn-sm" h
 <span class="article-metadata li-cite-author"><span>David Aparicio</span>, <span>Luiz E. Buzato</span></span>
 (2014).
 <a href=/publication/transactional_memories/>A Study of Factors External to Software Transactional Memories that Affect their Speed-up</a>.
-In <em>PiBic</em>.<p><a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/publication/transactional_memories/cite.bib>Cite</a></p></div></div></div></div></section><section id=tags class="home-section wg-tag-cloud"><div class=home-section-bg></div><div class=container><div class=row><div class="section-heading col-12 col-lg-4 mb-3 mb-lg-0 d-flex flex-column align-items-center align-items-lg-start"><h1 class=mb-0>Popular Topics</h1></div><div class="col-12 col-lg-8"><div class=tag-cloud><a href=/tag/bbl/ style=font-size:.7rem>BBL</a>
+In <em>PiBic</em>.<p><a class="btn btn-outline-primary btn-page-header btn-sm" href=/papers/2014_transactional_memories.pdf target=_blank rel=noopener>PDF</a>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/publication/transactional_memories/cite.bib>Cite</a></p></div></div></div></div></section><section id=tags class="home-section wg-tag-cloud"><div class=home-section-bg></div><div class=container><div class=row><div class="section-heading col-12 col-lg-4 mb-3 mb-lg-0 d-flex flex-column align-items-center align-items-lg-start"><h1 class=mb-0>Popular Topics</h1></div><div class="col-12 col-lg-8"><div class=tag-cloud><a href=/tag/bbl/ style=font-size:.7rem>BBL</a>
 <a href=/tag/cli/ style=font-size:1.465074772034928rem>CLI</a>
 <a href=/tag/cloud/ style=font-size:1.761046095340967rem>Cloud</a>
 <a href=/tag/cybersecurity/ style=font-size:1.3872241308652824rem>Cybersecurity</a>
