--- a/fr/codelabs/devfeststrasbourg23/index.html
+++ b/fr/codelabs/devfeststrasbourg23/index.html
@@ -20,9 +20,8 @@
   </style>
 </head>
 <body>
-  <google-codelab-analytics gaid="UA-49880327-14" ga4id=""></google-codelab-analytics>
+  <google-codelab-analytics gaid="UA-49880327-14"></google-codelab-analytics>
   <google-codelab codelab-gaid=""
-                  codelab-ga4id=""
                   id="devfeststrasbourg23"
                   title="La sécurité, par où commencer ? Install party 🎉"
                   environment="web"
@@ -882,8 +881,8 @@ spec:
         <p>Merci pour votre participation <strong>active</strong> et agréable, sur cette longue durée. Surtout qu&#39;il est bien tard, vous avez bien mérité le goûter !</p>
 <p>Nous, David Aparicio, nous profitons pour remercier infiniment les organisateurs et toute l&#39;équipe de DevFest Strasbourg pour leur aide et leur confiance</p>
 <p>Nous vous souhaitons un excellent DevFest Strasbourg 2023 !! ;-D</p>
-<p class="image-container"><img alt="Lien OpenFeedBack" src="img/232bac312c9ff0fb.png"></p>
-<p>S&#39;il vous plaît, laissez-nous votre note et vos commentaires sur <a href="https://openfeedback.io/JVBw5TL2fcGc8Mf3QNCE/2023-10-12/tQZH2XDdZHAobTGOPBdM" target="_blank">OpenFeedBack</a></p>
+<p class="image-container"><img alt="Lien OpenFeedBack" src="img/32145db0284ddc46.png"></p>
+<p>S&#39;il vous plaît, laissez-nous votre note et vos commentaires sur <a href="https://openfeedback.io/BVJQLdpKqfl1IBPtWpRR/0/installparty" target="_blank">OpenFeedBack</a></p>
 
 
       </google-codelab-step>
